styling: fixed button overflow on smaller screens

--- a/src/sections/Projects/styles.module.scss
+++ b/src/sections/Projects/styles.module.scss
@@ -179,6 +179,7 @@
                     a {
                         gap: 0;
                         padding: 0 0.25rem;
+                        font-size: 0.75rem;
                     }
                 }
             }
